# toysh

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml
doc/: CMakeLists.txt  Doxyfile.in
doc/pages/: index.dox
include/: CMakeLists.txt  alloc.h  args.h  charsets.h  cmakedefs.h.in  errors.h  filemgmt.h  invocation.h  lexer.h  macromgmt.h  main.h  parser.h  shell.h  sstring.h
man/: CMakeLists.txt
man/en/: toysh.tex
src/: alloc.c  args.c  charsets.c  errors.c  filemgmt.c  lexer.c  main.c  parser.c  shell.c  sstring.c
tests/sh/: hello.sh
